cleanup styling and spacing for relocated color issues section

--- a/src/sass/initial/_layout.scss
+++ b/src/sass/initial/_layout.scss
@@ -55,10 +55,14 @@ body {
   --layout-pad-block: 0;
   --layout-pad-inline: 0; // allows warning to stretch to the edge
 
+  display: grid;
   grid-area: main;
+  grid-template: '... content ...' auto / var(--double-gutter) 1fr var(
+      --double-gutter
+    );
 
   > * {
-    padding-inline: var(--double-gutter);
+    grid-column: content;
   }
 }
 
